# numpy-transformer

./: README.md  pyproject.toml  setup.cfg
.github/workflows/: main.yml
numpy_transformer/: basic_self_attention.py  ops.py
tests/control/: test_basic_self_attention.py
