[tool.poetry]
name = "from_scratch"
version = "0.1.0"
description = ""
authors = ["Luca Peric"]

[tool.poetry.dependencies]
python = "^3.9"
numpy = "^1.22.4"
torch = "*"
torchvision = "*"

[tool.poetry.dev-dependencies]
pytest = "*"
mypy = "*"
pytest-black = "*"
pytest-mypy = "*"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
